--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,6 @@ section {
     margin-bottom: 20px;
 }
 
-h1 {
-    color: #333;
-}
-
 .progress-bar {
     background-color: #f3f3f3;
     border-radius: 5px;
@@ -19,7 +15,7 @@ h1 {
 }
 
 .progress {
-    background-color: #4caf50;
+    background-color: #4caf50; /* Green color */
     height: 100%;
     border-radius: 5px;
 }
